--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<p><a href="homework1.html"> homework1</a></p>
+<p><a href="homework2.html"> homework2</a></p>
+<p><a href="homework3.html"> homework3</a></p>
 </body>
 </html>
