--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p><a href="homework1.html"> homework1</a></p>
-<p><a href="homework2.html"> homework2</a></p>
-<p><a href="homework3.html"> homework3</a></p>
-</body>
+    <head>
+        <title>金文斌的个人主页</title>
+        <meta charset='utf-8'>
+        <link rel="stylesheet" href="index-styles.css">
+    </head>
+    <body>
+        <h1>WELCOME</h1>
+        <p class="hm1"><a href="homework1.html"> homework1</a></p>
+        <p class="hm2"><a href="homework2.html"> homework2</a></p>
+        <p class="hm3"><a href="homework3.html"> homework3</a></p>
+        <p class="hm4"><a href="homework4.html"> homework4</a></p>
+        <p class="hm5"><a href="homework5.html"> homework5</a></p>
+    </body>
 </html>
